[project]
name = "antenna-pnf"
version = "0.1.0"
description = "Planar Near-Field Antenna Measurement Functions"
authors = [
    {name = "Hüseyin YİĞİT", email = "yigit.hsyn@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
antenna_pnf = "antenna_pnf.__main__:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
